[package]
name = "hwmonlx"
version = "0.1.0"
authors = ["Camille019"]
license = "MPL-2.0"
description = "A Rust interface to Linux hwmon sysfs interface"
keywords = ["sensor", "hwmon", "Linux"]
categories = ["hardware-support", "os::unix-apis"]

[dependencies]
lazy_static = "1.0"
libc = "0.2"
ratio = "0.0.0"
regex = "1.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.5"