[package]
name = "hwmonlx"
version = "0.1.0"
authors = ["Camille019"]
edition = "2018"
license = "MPL-2.0"
description = "A Rust interface to Linux hwmon sysfs interface"
keywords = ["sensor", "hwmon", "Linux"]
categories = ["hardware-support", "os::unix-apis"]

[dependencies]
lazy_static = "1.3"
libc = "0.2"
pest = "2.1"
pest_derive = "2.1"
ratio = "0.0.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.6"