[package]
name = "hwmon"
version = "0.1.0"
authors = ["Camille019"]
edition = "2021"
license = "MPL-2.0"
description = "A Rust interface to Linux hwmon sysfs interface"
keywords = ["sensor", "hwmon", "Linux"]
categories = ["hardware-support", "os::unix-apis"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sensorsconf = ["pest", "pest_derive"]

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.144"
log = "0.4.0"
pest = { version = "2.6.0", optional = true }
pest_derive = { version = "2.6.0", optional = true }

[dev-dependencies]
env_logger = "0.10.0"
