# SPDX-FileCopyrightText: 2021 Camille019
# SPDX-License-Identifier: GPL-2.0-only

[package]
name = "sensiloj"
version = "0.1.0"
authors = ["Camille019"]
edition = "2024"
license = "GPL-2.0"
keywords = ["sensor", "hwmon", "Linux"]
categories = ["hardware-support"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hwmon = { path = "../hwmon" }
env_logger = "0.11.0"
